# deep-learning-sca

./: .gitignore  GPU-TEST.py  Pipfile  README.md  copy_from_pc2.sh  copy_to_pc2.sh  env_setup.sh  env_setup_pipenv.sh  exp_baseline_models_run.py  exp_dataset_attack_run.py  exp_extract_attack_results.py  exp_get_nas_models_finished.py  exp_nas_model_run.py  pyproject.toml  requirements.txt  setup.py
cluster_job_scripts/: dataset_attack_excel_results_run.sh  test_saved_models_run.sh
cluster_job_scripts/baseline_attack/: AES_HD_attack_1D_run.sh  ASCAD_attack_1D.sh  DP4CONTEST_attack_1D.sh  run_all.sh
cluster_job_scripts/nas_attack/: AES_HD_nas_attack.sh  AES_RD_nas_attack_run.sh
cluster_job_scripts/nas_basic/: AES_HD_nas_train_models_run.sh  AES_RD_nas_train_models_run.sh  ASCAD_nas_train_models.sh  ASCAD_nas_train_models_run.sh  CHES_CTF_nas_train_models_run.sh  DP4CONTEST_nas_train_models.sh  DP4CONTEST_nas_train_models_run.sh
cluster_job_scripts/train/: AES_HD_train_models_1D.sh  AES_HD_train_models_1D_run.sh  AES_RD_train_models_1D_run.sh  ASCAD_train_models_1D.sh  ASCAD_train_models_1D_run.sh  CHES_CTF_train_models_1D_run.sh  DP4CONTEST_train_models_1D_run.sh  run_all.sh
cluster_job_scripts_noctua2/: dataset_attack_excel_results.sh  dataset_attack_excel_results_run.sh  test_saved_models_run.sh
deepscapy/: .gitignore  __init__.py  callbacks.py  constants.py  experimental_utils.py  metrics.py  utils.py
pytorch/: ASCAD_train_models_pytorch.py
singularity/: compile_env.sh  deepscapy.def  deepscapy_old.def
singularity2/: compile_env.sh  deepscapy.def
(+92 files in other folders)
